displaying content from athlete table into handlebar

--- a/views/partials/home.handlebars
+++ b/views/partials/home.handlebars
@@ -15,13 +15,19 @@
         </div>
       </div>
       <div class='col-md-1'>
-        <button type="submit" class="btn btn-default" name='lastNameBtn'>Last Name</button>
+        <button type="submit" class="btn btn-default btn-block" name='lastNameBtn'>Last Name</button>
       </div>
       <div class='col-md-1'>
-        <button type="submit" class="btn btn-default" name='sportBtn'>Sport</button>
+        <button type="submit" class="btn btn-default btn-block" name='sportBtn'>Sport</button>
       </div>
       <div class='col-md-1'>
-        <button type="submit" class="btn btn-default" name='teamBtn'>Team</button>
+        <button type="submit" class="btn btn-default btn-block" name='teamBtn'>League</button>
+      </div>
+      <div class='col-md-1'>
+        <button type="submit" class="btn btn-default btn-block" name='lastNameBtn'>Team</button>
+      </div>
+      <div class='col-md-1'>
+        <button type="submit" class="btn btn-default btn-block" name='sportBtn'>Alma Mater</button>
       </div>
     </div>
   </form>
@@ -48,27 +54,25 @@
         <table class="table table-hover">
           <thead>
             <tr>
-              <th>Firstname</th>
-              <th>Lastname</th>
-              <th>Email</th>
+              <th>First Name</th>
+              <th>Last Name</th>
+              <th>Age</th>
+              <th>Weight</th>
+              <th>Height</th>
+              <th>Salary</th>
             </tr>
           </thead>
           <tbody>
-            <tr>
-              <td>John</td>
-              <td>Doe</td>
-              <td>john@example.com</td>
-            </tr>
-            <tr>
-              <td>Mary</td>
-              <td>Moe</td>
-              <td>mary@example.com</td>
-            </tr>
-            <tr>
-              <td>July</td>
-              <td>Dooley</td>
-              <td>july@example.com</td>
-            </tr>
+            {{#each dbObj}}
+              <tr>
+                <td>{{this.firstname}}</td>
+                <td>{{this.lastname}}</td>
+                <td>{{this.age}}</td>
+                <td>{{this.weight}}</td>
+                <td>{{this.height}}</td>
+                <td>{{this.salary}}</td>
+              </tr>
+            {{/each}}
           </tbody>
         </table>
       </div>
