--- a/views/partials/header.handlebars
+++ b/views/partials/header.handlebars
@@ -6,9 +6,10 @@
     <ul class="nav navbar-nav">
       <li class="active"><a href="/">Home</a></li>
       <li><a href="/add-athlete">Add Athlete</a></li>
-      <li><a href="#">Add City</a></li>
-      <li><a href="#">Add Alma Mater</a></li>
-			<li><a href="/add-team">Add Team</a></li>
+      <li><a href="/add-team">Add Team</a></li>
+      <li><a href="/add-city">Add City</a></li>
+      <li><a href="/add-alma-mater">Add Alma Mater</a></li>
+      <li><a href="/update-tables">Update Tables</a></li>
     </ul>
   </div>
 </nav>
