--- a/views/partials/home.handlebars
+++ b/views/partials/home.handlebars
@@ -15,32 +15,29 @@
           <input type="text" class="form-control" placeholder="Search" name='searchQuery' id='searchContent'>
         </div>
       </div>
-      <div class='col-md-1'>
-        <button type="submit" class="btn btn-default btn-block" name='lastNameBtn'>Last Name</button>
-      </div>
-      <div class='col-md-1'>
-        <button type="submit" class="btn btn-default btn-block" name='sportBtn'>Sport</button>
-      </div>
-      <div class='col-md-1'>
-        <button type="submit" class="btn btn-default btn-block" name='leagueBtn'>League</button>
-      </div>
-      <div class='col-md-1'>
-        <button type="submit" class="btn btn-default btn-block" name='teamBtn'>Team</button>
-      </div>
-      <div class='col-md-1'>
-        <button type="submit" class="btn btn-default btn-block" name='almaMaterBtn'>Alma Mater</button>
-      </div>
+          <div class='col-md-1'>
+            <button type="submit" class="btn btn-default btn-block" name='lastNameBtn'>Last Name</button>
+          </div>
+          <div class='col-md-1'>
+            <button type="submit" class="btn btn-default btn-block" name='cityBtn'>City</button>
+          </div>
+          <div class='col-md-1'>
+            <button type="submit" class="btn btn-default btn-block" name='leagueBtn'>League</button>
+          </div>
+          <div class='col-md-1'>
+            <button type="submit" class="btn btn-default btn-block" name='teamBtn'>Team</button>
+          </div>
+          <div class='col-md-1'>
+            <button type="submit" class="btn btn-default btn-block" name='almaMaterBtn'>Alma Mater</button>
+          </div>
     </div>
-  </form>
+    </form>
 
     <div class='row'>
       {{#if lastNameBool}}
       <div class="container-fluid">
-
         <h4>Results for search by: {{searchType}}....</h4>
-
         <div class='col-md-6'>
-
         <form action='/toggle-refine' method='post'>
           <button type="submit" class="btn btn-default" name='refineSearchBtn'>Refine Search!</button>
         </form>
@@ -51,7 +48,6 @@
           </div>
         </div>
         {{/if}}
-
         <table class="table table-hover">
           <thead>
             <tr>
@@ -64,16 +60,37 @@
             </tr>
           </thead>
           <tbody>
-            {{#each dbObj}}
+            <form action='/edit-or-delete' method='post'>
+              {{#each dbObj}}
+                <tr>
+                  <td>{{this.firstname}}</td>
+                  <td>{{this.lastname}}</td>
+                  <td>{{this.team}}</td>
+                  <td>{{this.age}}</td>
+                  <td>{{this.weight}}</td>
+                  <td>{{this.height}}</td>
+                  <td>{{this.salary}}</td>
+                  <td><button type="submit" class="btn btn-default" name='edit' value='{{this.id}}'>Edit</button></td>
+                  <td><button type="submit" class="btn btn-default" name='delete' value='{{this.id}}'>Delete</button></td>
+                </tr>
+              {{/each}}
+            </form>
+            {{#if editFieldBool}}
               <tr>
-                <td>{{this.firstname}}</td>
-                <td>{{this.lastname}}</td>
-                <td>{{this.age}}</td>
-                <td>{{this.weight}}</td>
-                <td>{{this.height}}</td>
-                <td>{{this.salary}}</td>
+                {{#each editObj}}
+                <form action='/edit' method='post'>
+                  <td><input type="text" name="fname" value={{this.firstname}}></td>
+                  <td><input type="text" name="lname" value="{{this.lastname}}"></td>
+                  <td><input type="text" name="teamname" value="{{this.team}}"></td>
+                  <td><input type="text" name="age" value="{{this.age}}"></td>
+                  <td><input type="text" name="weight" value="{{this.weight}}"></td>
+                  <td><input type="text" name="height" value="{{this.height}}"></td>
+                  <td><input type="text" name="salary" value="{{this.salary}}"></td>
+                  <td><button type="submit" class="btn btn-default" name='submit' value='{{this.id}}'>Submit</button></td>
+                </form>
+                {{/each}}
               </tr>
-            {{/each}}
+            {{/if}}
           </tbody>
         </table>
       </div>
@@ -96,57 +113,151 @@
         {{/if}}
       </div>
 
+      <div class='container-fluid'>
+        <div class='row'>
+          <div class='col-md-9'>
+            <table class="table table-hover">
+              <thead>
+                <tr>
+                  <th>Team</th>
+                  <th>City</th>
+                  <th>League</th>
+                  <th>Sport</th>
+                  <th>Players</th>
+                </tr>
+              </thead>
+              <tbody>
+                {{#each dbObj}}
+                <tr>
+                  <td>{{this.teamname}}</td>
+                  <td>{{this.city}}</td>
+                  <td>{{this.league}}</td>
+                  <td>{{this.sport}}</td>
+                {{/each}}
+                </tr>
 
-      <table class="table table-hover">
-        <thead>
-          <tr>
-            <th>Team</th>
-            <th>City</th>
-            <th>League</th>
-            <th>Sport</th>
-            <th>Players</th>
-          </tr>
-        </thead>
-        <tbody>
-          {{#each dbObj}}
-          <tr>
-            <td>{{this.teamname}}</td>
-            <td>{{this.city}}</td>
-            <td>{{this.league}}</td>
-            <td>{{this.sport}}</td>
-          {{/each}}
+              </tbody>
+            </table>
+          </div>
+          <div class='col-md-3'>
+            <table class="table table-hover">
+              <thead>
+                <th>First Name</th>
+                <th>Last Name </th>
+              </thead>
+              <tbody>
+                {{#each athletePerTeam}}
+                <tr>
+                  <td>{{this.firstname}}</td>
+                  <td>{{this.lastname}}</td>
+                </tr>
+                {{/each}}
+              </tbody>
+            </table>
+          </div>
+        </div>
+      </div>
 
-          {{#each athletePerTeam}}
-              <td>{{this.firstname}} {{this.lastname}}</td>
-          {{/each}}
-          </tr>
-
-        </tbody>
-        <!-- <thead>
-          <tr>
-            <th>First Name</th>
-            <th>Last Name</th>
-            <th>Age</th>
-            <th>Weight</th>
-            <th>Height</th>
-            <th>Salary</th>
-          </tr>
-        </thead>
-        <tbody>
-          {{#each dbObj}}
-            <tr>
-              <td>{{this.firstname}}</td>
-              <td>{{this.lastname}}</td>
-              <td>{{this.age}}</td>
-              <td>{{this.weight}}</td>
-              <td>{{this.height}}</td>
-              <td>{{this.salary}}</td>
-            </tr>
-          {{/each}}
-        </tbody> -->
-      </table>
     </div>
 
   </div>
   {{/if}}
+
+  <div class='container-fluid'>
+    <div class='row'>
+      {{#if almaMaterBtnBool}}
+      <div class="container-fluid">
+        <h4>Results for search by: {{searchType}}....</h4>
+        <div class='col-md-6'>
+        <form action='/toggle-refine' method='post'>
+          <button type="submit" class="btn btn-default" name='refineSearchBtn'>Refine Search!</button>
+        </form>
+          {{#if refineSearchBool}}
+          <div class="input-group">
+            <span class="input-group-addon" id="basic-addon1">@</span>
+            <input type="text" class="form-control" placeholder="Search" name='searchQuery' id='searchContent'>
+          </div>
+        </div>
+        {{/if}}
+        <table class="table table-hover">
+          <thead>
+            <tr>
+              <th>School Name</th>
+              <th>City</th>
+              <th>State</th>
+              <th>Mascot</th>
+              <th>Student Population</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+            {{#each dbObj}}
+                <td>{{this}}</td>
+            {{/each}}
+            </tr>
+          </tbody>
+        </table>
+      </div>
+      {{/if}}
+    </div>
+  </div>
+  <div class='container-fluid'>
+    <div class='row'>
+      {{#if cityBtnBool}}
+      <div class="container-fluid">
+        <h4>Results for search by: {{searchType}}....</h4>
+        <div class='col-md-6'>
+        <form action='/toggle-refine' method='post'>
+          <button type="submit" class="btn btn-default" name='refineSearchBtn'>Refine Search!</button>
+        </form>
+          {{#if refineSearchBool}}
+          <div class="input-group">
+            <span class="input-group-addon" id="basic-addon1">@</span>
+            <input type="text" class="form-control" placeholder="Search" name='searchQuery' id='searchContent'>
+          </div>
+        </div>
+        {{/if}}
+        <table class="table table-hover">
+          <thead>
+            <tr>
+              <th>City</th>
+              <th>State</th>
+              <th>Population</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+            {{#each dbObj}}
+                <td>{{this.cityname}}</td>
+                <td>{{this.state}}</td>
+                <td>{{this.population}}</td>
+            {{/each}}
+            </tr>
+          </tbody>
+        </table>
+        <table class="table table-hover">
+          <thead>
+            <tr>
+              <th>Team Name</th>
+              <th>Sport</th>
+              <th>League</th>
+              <th>Payroll</th>
+            </tr>
+          </thead>
+          <tbody>
+            {{#each dbObj2}}
+            <tr>
+
+                <td>{{this.teamname}}</td>
+                <td>{{this.sport}}</td>
+                <td>{{this.league}}</td>
+                <td>{{this.payroll}}</td>
+            </tr>
+            {{/each}}
+          </tbody>
+        </table>
+      </div>
+      {{/if}}
+    </div>
+  </div>
 </div>
